--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://kenney_abstract-platformer/Tilesheet/Kings and Pigs/Sprites/14-TileSets/Decorations (32x32).png")
+dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_abstract-platformer/", "res://kenney_abstract-platformer/Tilesheet/", "res://kenney_abstract-platformer/Tilesheet/Kings and Pigs/", "res://kenney_abstract-platformer/Tilesheet/Kings and Pigs/Sprites/", "res://kenney_abstract-platformer/Tilesheet/Kings and Pigs/Sprites/14-TileSets/", "res://kenney_abstract-platformer/Tilesheet/Kings and Pigs/Sprites/01-King Human/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,10 +25,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://level.tscn", "res://player.tscn")
+open_scenes=PackedStringArray("res://level.tscn", "res://menu.tscn", "res://player.tscn")
 current_scene="res://player.tscn"
 center_split_offset=-709
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -47,3 +47,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
